--- a/app/src/main/res/layout/dialog_user.xml
+++ b/app/src/main/res/layout/dialog_user.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/mTextViewTitleUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -41,10 +41,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
+            app:layout_constraintTop_toBottomOf="@+id/mTextViewTitleUser">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/mImageViewUserIcon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_usericon" />
@@ -61,7 +61,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/mTextViewSelectedUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/ic_achievementmainbtn"
@@ -78,7 +78,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/mButtonSelectedUserStart"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -90,7 +90,7 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/mImageButtonUserClose"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="52dp"
             android:layout_height="52dp"
