--- a/app/src/main/res/layout/dialog_correct.xml
+++ b/app/src/main/res/layout/dialog_correct.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:fontFamily="@font/courierprime_regular"
-            android:text="Game Over!"
+            android:text="Congratulations!"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -32,7 +32,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
@@ -48,10 +48,11 @@
                 android:layout_marginBottom="16dp"
                 android:fontFamily="@font/courierprime_regular"
                 android:gravity="center"
-                android:text="Time is up!"
+                android:text="You've got the right answer!"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:layout_weight="1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -62,17 +63,7 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/mImageButtonTimesUpRestart"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
-                    android:padding="0dp"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/ic_restarticon" />
-
-                <ImageButton
-                    android:id="@+id/mImageButtonTimesUpOk"
+                    android:id="@+id/mImageButtonCorrectOk"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
