--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,6 +138,7 @@
                 android:layout_height="48dp"
                 android:padding="0dp"
                 android:scaleType="fitCenter"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/mImageButtonExit"
                 app:layout_constraintStart_toStartOf="parent"
@@ -145,7 +146,7 @@
                 app:srcCompat="@drawable/ic_optionsicon" />
 
             <ImageButton
-                android:id="@+id/mImageButtonLeaderboard"
+                android:id="@+id/mImageButtonUserLogs"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
