--- a/app/src/main/res/layout/dialog_items.xml
+++ b/app/src/main/res/layout/dialog_items.xml
@@ -46,6 +46,33 @@
             app:layout_constraintTop_toBottomOf="@+id/mTextViewTitleItems">
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView56"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/courierprime_bold"
+                    android:gravity="center"
+                    android:text="Remaining points:"
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/mTextViewItemsRemainingPoints"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/courierprime_bold"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -261,17 +288,19 @@
             </LinearLayout>
         </LinearLayout>
 
-        <Button
-            android:id="@+id/mButtonItemPlay"
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/mImageButtonItemHome"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginBottom="16dp"
-            android:text="PLAY"
-            android:textSize="24dp"
-            android:padding="0dp"
-            android:textColor="#ffffff"
             android:fontFamily="@font/courierprime_bold"
-            android:background="@drawable/ic_startbtn"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_okayicon"
+            android:textColor="#ffffff"
+            android:textSize="24dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
