--- a/app/src/main/res/layout/dialog_level_complete.xml
+++ b/app/src/main/res/layout/dialog_level_complete.xml
@@ -49,6 +49,56 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/mTextViewCompletedSelectedLevel"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/courierprime_bold"
+                        android:text="Level:"
+                        android:textAlignment="center"
+                        android:textAllCaps="false"
+                        android:textColor="#FAFFFFFF"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/mTextViewCompletedAverageTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/courierprime_bold"
+                        android:text="Avg. Time:"
+                        android:textAlignment="center"
+                        android:textAllCaps="false"
+                        android:textColor="#FAFFFFFF"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="bottom"
                 android:orientation="horizontal">
 
@@ -82,7 +132,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/textView7"
@@ -119,37 +170,39 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/mImageButtonCompletedHome"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="52dp"
-                    android:layout_height="52dp"
-                    android:layout_weight="1"
-                    android:padding="0dp"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/ic_homeicon"
-                    android:contentDescription="Home" />
-
-                <ImageButton
                     android:id="@+id/mImageViewCompletedRestart"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="52dp"
                     android:layout_height="52dp"
                     android:layout_weight="1"
                     android:padding="0dp"
+                    android:visibility="gone"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_restarticon"
                     android:contentDescription="Restart" />
 
                 <ImageButton
-                    android:id="@+id/mImageButtonCompletedPlay"
+                    android:id="@+id/mImageButtonCompletedOk"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="52dp"
                     android:layout_height="52dp"
                     android:layout_weight="1"
+                    android:contentDescription="Home"
                     android:padding="0dp"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/ic_playicon"
-                    android:contentDescription="Play" />
+                    app:srcCompat="@drawable/ic_okayicon" />
+
+                <ImageButton
+                    android:id="@+id/mImageButtonCompletedNext"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="52dp"
+                    android:layout_height="52dp"
+                    android:layout_weight="1"
+                    android:contentDescription="Play"
+                    android:padding="0dp"
+                    android:scaleType="fitCenter"
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/ic_playicon" />
             </LinearLayout>
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
