--- a/app/src/main/res/layout/dialog_paused.xml
+++ b/app/src/main/res/layout/dialog_paused.xml
@@ -58,7 +58,8 @@
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/mButtonPausedResume"
