--- a/app/src/main/res/layout/truth_table_not_gate.xml
+++ b/app/src/main/res/layout/truth_table_not_gate.xml
@@ -8,8 +8,9 @@
 
     <LinearLayout
         android:id="@+id/linearLayout8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,8 +18,10 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="16dp"
+            android:layout_weight="1"
             android:background="@drawable/border_truth_table"
             android:gravity="center"
             android:orientation="horizontal">
@@ -33,7 +36,8 @@
                 <TextView
                     android:id="@+id/textView16"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -47,7 +51,8 @@
                 <TextView
                     android:id="@+id/textView20"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -61,7 +66,8 @@
                 <TextView
                     android:id="@+id/textView21"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -83,7 +89,8 @@
                 <TextView
                     android:id="@+id/textView18"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -97,7 +104,8 @@
                 <TextView
                     android:id="@+id/mTextViewTruthTableNotAnswer1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -111,7 +119,8 @@
                 <TextView
                     android:id="@+id/mTextViewTruthTableNotAnswer2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -128,7 +137,7 @@
         <Button
             android:id="@+id/mButtonTruthTableNOTSubmit"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_startbtn"
             android:fontFamily="@font/courierprime_bold"
