--- a/app/src/main/res/layout/truth_table_xnor_gate.xml
+++ b/app/src/main/res/layout/truth_table_xnor_gate.xml
@@ -8,8 +8,9 @@
 
     <LinearLayout
         android:id="@+id/linearLayout8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,8 +18,10 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="16dp"
+            android:layout_weight="1"
             android:background="@drawable/border_truth_table"
             android:gravity="center"
             android:orientation="horizontal">
@@ -33,7 +36,8 @@
                 <TextView
                     android:id="@+id/textView16"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -47,7 +51,8 @@
                 <TextView
                     android:id="@+id/textView20"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -61,7 +66,8 @@
                 <TextView
                     android:id="@+id/textView21"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -75,7 +81,8 @@
                 <TextView
                     android:id="@+id/textView24"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -89,7 +96,8 @@
                 <TextView
                     android:id="@+id/textView25"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -105,12 +113,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView19"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -124,7 +134,8 @@
                 <TextView
                     android:id="@+id/textView22"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -138,7 +149,8 @@
                 <TextView
                     android:id="@+id/textView23"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -152,7 +164,8 @@
                 <TextView
                     android:id="@+id/textView26"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -166,7 +179,8 @@
                 <TextView
                     android:id="@+id/textView27"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -188,7 +202,8 @@
                 <TextView
                     android:id="@+id/textView18"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -202,7 +217,8 @@
                 <TextView
                     android:id="@+id/mTextViewTruthTableXNORAnswer1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -216,7 +232,8 @@
                 <TextView
                     android:id="@+id/mTextViewTruthTableXNORAnswer2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -230,7 +247,8 @@
                 <TextView
                     android:id="@+id/mTextViewTruthTableXNORAnswer3"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -244,7 +262,8 @@
                 <TextView
                     android:id="@+id/mTextViewTruthTableXNORAnswer4"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
@@ -262,7 +281,7 @@
         <Button
             android:id="@+id/mButtonTruthTableXNORSubmit"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_startbtn"
             android:fontFamily="@font/courierprime_bold"
