--- a/app/src/main/res/layout/dialog_select_user.xml
+++ b/app/src/main/res/layout/dialog_select_user.xml
@@ -68,19 +68,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:visibility="gone"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="visible">
 
                 <EditText
-                    android:gravity="center"
                     android:id="@+id/mEditTextAddUserUserName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:singleLine="true"
+                    android:gravity="center"
+                    android:hint="Username"
                     android:inputType="textPersonName"
-                    android:hint="Username" />
+                    android:singleLine="true" />
 
                 <ImageButton
                     android:id="@+id/mImageButtonSelectUsernameAddUsername"
@@ -89,7 +89,6 @@
                     android:layout_height="48dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_weight="1"
                     android:padding="0dp"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_okayicon" />
