--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -19,7 +19,7 @@
         <LinearLayout
             android:id="@+id/linearLayout6"
             android:layout_width="match_parent"
-            android:layout_height="72dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -44,16 +44,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/mTextViewGameHintCount"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/courierprime_bold"
                         android:text="0"
                         android:textAlignment="center"
-                        android:textSize="18sp" />
+                        android:textColor="#000000" />
 
                     <ImageButton
                         android:id="@+id/mImageButtonGameHint"
@@ -69,16 +69,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/mTextViewGameSlowTimeCount"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/courierprime_bold"
                         android:text="0"
                         android:textAlignment="center"
-                        android:textSize="18sp" />
+                        android:textColor="#000000" />
 
                     <ImageButton
                         android:id="@+id/mImageButtonGameSlowTime"
@@ -94,16 +94,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/mTextViewGameAddTimeCount"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/courierprime_bold"
                         android:text="0"
                         android:textAlignment="center"
-                        android:textSize="18sp" />
+                        android:textColor="#000000" />
 
                     <ImageButton
                         android:id="@+id/mImageButtonGameAddTime"
@@ -143,7 +143,7 @@
                 <ImageView
                     android:id="@+id/imageView6"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:layout_weight="1"
                     android:padding="0dp"
                     app:srcCompat="@drawable/ic_time" />
@@ -164,7 +164,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
@@ -172,7 +172,7 @@
                     android:id="@+id/mImageButtonGamePause"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:layout_weight="1"
                     android:padding="0dp"
                     android:scaleType="fitCenter"
@@ -182,7 +182,7 @@
                     android:id="@+id/mImageButtonGameHelp"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:layout_weight="1"
                     android:padding="0dp"
                     android:scaleType="fitCenter"
@@ -230,35 +230,28 @@
                     android:gravity="center"
                     android:orientation="vertical" />
 
-                <Button
-                    android:id="@+id/mButtonDragAndDropSubmit"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_choices"
-                    android:fontFamily="@font/courierprime_bold"
-                    android:padding="8dp"
-                    android:text="Submit"
-                    android:textSize="24sp" />
-
                 <LinearLayout
+                    android:id="@+id/mLinearLayoutDragAndDropChoiceHolder"
                     android:layout_width="match_parent"
-                    android:layout_height="78dp"
-                    android:orientation="horizontal">
+                    android:layout_height="72dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    tools:visibility="visible">
 
                     <LinearLayout
                         android:id="@+id/mLinearLayoutDragAndDropChoiceContainer1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="@drawable/bg_choices"
                         android:gravity="center"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/mImageViewDragAndDropChoice1"
-                            android:layout_width="78dp"
-                            android:layout_height="78dp"
-                            app:srcCompat="@drawable/not" />
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            app:srcCompat="@drawable/or" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -266,14 +259,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="@drawable/bg_choices"
                         android:gravity="center"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/mImageViewDragAndDropChoice2"
-                            android:layout_width="78dp"
-                            android:layout_height="78dp"
-                            app:srcCompat="@drawable/and" />
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            app:srcCompat="@drawable/xnor" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -281,14 +275,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="@drawable/bg_choices"
                         android:gravity="center"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/mImageViewDragAndDropChoice3"
-                            android:layout_width="78dp"
-                            android:layout_height="78dp"
-                            app:srcCompat="@drawable/or" />
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            app:srcCompat="@drawable/and" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -296,15 +291,91 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:background="@drawable/bg_choices"
                         android:gravity="center"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/mImageViewDragAndDropChoice4"
-                            android:layout_width="78dp"
-                            android:layout_height="78dp"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            app:srcCompat="@drawable/not" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/mLinearLayoutDragAndDropChoiceContainer5"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/bg_choices"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/mImageViewDragAndDropChoice5"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            app:srcCompat="@drawable/not" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/mLinearLayoutDragAndDropChoiceContainer6"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/bg_choices"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/mImageViewDragAndDropChoice6"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            app:srcCompat="@drawable/and" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/mLinearLayoutDragAndDropChoiceContainer7"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/bg_choices"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/mImageViewDragAndDropChoice7"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            app:srcCompat="@drawable/or" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/mLinearLayoutDragAndDropChoiceContainer8"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/bg_choices"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/mImageViewDragAndDropChoice8"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
                             app:srcCompat="@drawable/xnor" />
                     </LinearLayout>
+
+                    <Button
+                        android:id="@+id/mButtonDragAndDropSubmit"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/bg_choices"
+                        android:fontFamily="@font/courierprime_bold"
+                        android:padding="8dp"
+                        android:text="Submit" />
+
                 </LinearLayout>
             </LinearLayout>
 
@@ -521,7 +592,6 @@
                         android:text="Both inputs = 0"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
-                        android:textSize="24sp"
                         android:textStyle="bold" />
 
                     <Button
@@ -536,7 +606,6 @@
                         android:text="Both inputs = 1"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
-                        android:textSize="24sp"
                         android:textStyle="bold" />
 
                     <Button
@@ -551,7 +620,6 @@
                         android:text="The two inputs are unequal"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
-                        android:textSize="24sp"
                         android:textStyle="bold" />
 
                     <Button
@@ -569,7 +637,6 @@
                         android:text="Both inputs are undefined"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
-                        android:textSize="24sp"
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
