--- a/app/src/main/res/layout/drag_and_drop_and_gate.xml
+++ b/app/src/main/res/layout/drag_and_drop_and_gate.xml
@@ -18,113 +18,170 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textView75"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:elevation="2dp"
+                android:fontFamily="@font/courierprime_bold"
+                android:padding="8dp"
+                android:text="AND Gate"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fadeScrollbars="false"
+                android:padding="8dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="78dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <Switch
-                        android:id="@+id/mSwitchANDDragAndDrop1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/textView29"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <ImageView
+                        android:id="@+id/imageView10"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:fontFamily="@font/courierprime_bold"
-                        android:text="0"
-                        android:textColor="#000000"
-                        android:textSize="30sp" />
-
-                    <LinearLayout
-                        android:id="@+id/mLinearLayoutANDDragAndDropAnswer1"
-                        android:layout_width="78dp"
-                        android:layout_height="78dp"
-                        android:background="@drawable/bg_choices"
-                        android:orientation="horizontal"
-                        android:padding="4dp"/>
+                        android:background="#fbde8a"
+                        app:srcCompat="@drawable/ic_and_gate" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="78dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <Switch
-                        android:id="@+id/mSwitchANDDragAndDrop2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/textView30"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/courierprime_bold"
-                        android:text="1"
-                        android:textColor="#000000"
-                        android:textSize="30sp" />
-
-                    <LinearLayout
-                        android:layout_width="78dp"
-                        android:layout_height="78dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/mImageViewANDDragAndDropLine"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            app:srcCompat="@drawable/line" />
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/mLinearLayoutANDDragAndDropAnswer2"
-                    android:layout_width="78dp"
-                    android:layout_height="78dp"
-                    android:background="@drawable/bg_choices"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="4dp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/mImageViewXNORDragAndDropResult"
-                    android:layout_width="78dp"
-                    android:layout_height="78dp"
-                    app:srcCompat="@drawable/ic_bulb_off" />
-            </LinearLayout>
+            </ScrollView>
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <TextView
+                android:id="@+id/textView70"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_choices"
+                android:fontFamily="@font/courierprime_bold"
+                android:padding="4dp"
+                android:text="Drag and Drop Here"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fadeScrollbars="false">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#fbde8a"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="2dp"
+                                android:background="@drawable/bg_rect"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/textView71"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:background="@drawable/bg_choices"
+                                    android:fontFamily="@font/courierprime_bold"
+                                    android:gravity="center"
+                                    android:padding="8dp"
+                                    android:text="1"
+                                    android:textAlignment="center"
+                                    android:textAllCaps="false"
+                                    android:textColor="#000000"
+                                    android:textSize="24dp"
+                                    android:textStyle="bold" />
+
+                                <LinearLayout
+                                    android:id="@+id/mLinearLayoutANDDragAndDropAnswer1"
+                                    android:layout_width="94dp"
+                                    android:layout_height="94dp"
+                                    android:background="@drawable/bg_choices"
+                                    android:gravity="center"
+                                    android:orientation="vertical">
+
+                                </LinearLayout>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="2dp"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/textView722"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:background="@drawable/bg_choices"
+                                    android:fontFamily="@font/courierprime_bold"
+                                    android:gravity="center"
+                                    android:padding="8dp"
+                                    android:text="2"
+                                    android:textAlignment="center"
+                                    android:textAllCaps="false"
+                                    android:textColor="#000000"
+                                    android:textSize="24dp"
+                                    android:textStyle="bold" />
+
+                                <LinearLayout
+                                    android:id="@+id/mLinearLayoutANDDragAndDropAnswer2"
+                                    android:layout_width="94dp"
+                                    android:layout_height="94dp"
+                                    android:background="@drawable/bg_choices"
+                                    android:gravity="center"
+                                    android:orientation="vertical">
+
+                                </LinearLayout>
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+                </LinearLayout>
+            </ScrollView>
+
+        </LinearLayout>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
