--- a/app/src/main/res/layout/drag_and_drop_xor_gate.xml
+++ b/app/src/main/res/layout/drag_and_drop_xor_gate.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/default_color">
@@ -18,117 +19,203 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textView75"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:elevation="2dp"
+                android:fontFamily="@font/courierprime_bold"
+                android:padding="8dp"
+                android:text="XOR Gate"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fadeScrollbars="false"
+                android:padding="8dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="78dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <ImageView
+                        android:id="@+id/imageView10"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView29"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:fontFamily="@font/courierprime_bold"
-                            android:text="1"
-                            android:textAlignment="center"
-                            android:textColor="#000000"
-                            android:textSize="24sp" />
-
-                        <TextView
-                            android:id="@+id/textView31"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:fontFamily="@font/courierprime_bold"
-                            android:text="1"
-                            android:textAlignment="center"
-                            android:textColor="#000000"
-                            android:textSize="24sp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/mLinearLayoutXORDragAndDropAnswer1"
-                        android:layout_width="78dp"
-                        android:layout_height="78dp"
-                        android:background="@drawable/bg_choices"
-                        android:orientation="horizontal"
-                        android:padding="4dp"/>
+                        android:background="#fbde8a"
+                        app:srcCompat="@drawable/ic_xor_gate" />
                 </LinearLayout>
+            </ScrollView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <TextView
+                android:id="@+id/textView70"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_choices"
+                android:fontFamily="@font/courierprime_bold"
+                android:padding="4dp"
+                android:text="Drag and Drop Here"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fadeScrollbars="false">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="78dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView30"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:fontFamily="@font/courierprime_bold"
-                        android:text="0"
-                        android:textAlignment="center"
-                        android:textColor="#000000"
-                        android:textSize="24sp" />
+                        android:background="#fbde8a"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:id="@+id/mLinearLayoutXORDragAndDropAnswer2"
-                        android:layout_width="78dp"
-                        android:layout_height="78dp"
-                        android:background="@drawable/bg_choices"
-                        android:orientation="horizontal"
-                        android:padding="4dp"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="2dp"
+                                android:background="@drawable/bg_rect"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/textView71"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:background="@drawable/bg_choices"
+                                    android:fontFamily="@font/courierprime_bold"
+                                    android:gravity="center"
+                                    android:padding="8dp"
+                                    android:text="1"
+                                    android:textAlignment="center"
+                                    android:textAllCaps="false"
+                                    android:textColor="#000000"
+                                    android:textSize="24dp"
+                                    android:textStyle="bold" />
+
+                                <LinearLayout
+                                    android:id="@+id/mLinearLayoutXORDragAndDropAnswer1"
+                                    android:layout_width="94dp"
+                                    android:layout_height="94dp"
+                                    android:background="@drawable/bg_choices"
+                                    android:gravity="center"
+                                    android:orientation="vertical">
+
+                                </LinearLayout>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="2dp"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/textView722"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:background="@drawable/bg_choices"
+                                    android:fontFamily="@font/courierprime_bold"
+                                    android:gravity="center"
+                                    android:padding="8dp"
+                                    android:text="2"
+                                    android:textAlignment="center"
+                                    android:textAllCaps="false"
+                                    android:textColor="#000000"
+                                    android:textSize="24dp"
+                                    android:textStyle="bold" />
+
+                                <LinearLayout
+                                    android:id="@+id/mLinearLayoutXORDragAndDropAnswer2"
+                                    android:layout_width="94dp"
+                                    android:layout_height="94dp"
+                                    android:background="@drawable/bg_choices"
+                                    android:gravity="center"
+                                    android:orientation="vertical">
+
+                                </LinearLayout>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="2dp"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/textView7a2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:background="@drawable/bg_choices"
+                                    android:fontFamily="@font/courierprime_bold"
+                                    android:gravity="center"
+                                    android:padding="8dp"
+                                    android:text="3"
+                                    android:textAlignment="center"
+                                    android:textAllCaps="false"
+                                    android:textColor="#000000"
+                                    android:textSize="24dp"
+                                    android:textStyle="bold" />
+
+                                <LinearLayout
+                                    android:id="@+id/mLinearLayoutXORDragAndDropAnswer3"
+                                    android:layout_width="94dp"
+                                    android:layout_height="94dp"
+                                    android:background="@drawable/bg_choices"
+                                    android:gravity="center"
+                                    android:orientation="vertical">
+
+                                </LinearLayout>
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/mLinearLayoutXORDragAndDropAnswer3"
-                    android:layout_width="78dp"
-                    android:layout_height="78dp"
-                    android:background="@drawable/bg_choices"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="4dp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/mImageViewXORDragAndDropResult"
-                    android:layout_width="78dp"
-                    android:layout_height="78dp"
-                    app:srcCompat="@drawable/ic_bulb_off" />
-            </LinearLayout>
+            </ScrollView>
 
         </LinearLayout>
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
