--- a/app/src/main/res/layout/truth_table_not_gate.xml
+++ b/app/src/main/res/layout/truth_table_not_gate.xml
@@ -17,122 +17,135 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:layout_weight="1"
-            android:background="@drawable/border_truth_table"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_weight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
                     android:layout_weight="1"
                     android:background="@drawable/border_truth_table"
-                    android:fontFamily="@font/courierprime_bold"
                     android:gravity="center"
-                    android:padding="8dp"
-                    android:text="Input A"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView20"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_truth_table"
-                    android:fontFamily="@font/courierprime_bold"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="0"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textView21"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_truth_table"
-                    android:fontFamily="@font/courierprime_bold"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="1"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/textView16"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/border_truth_table"
+                            android:fontFamily="@font/courierprime_bold"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="Input A"
+                            android:textAlignment="center"
+                            android:textColor="#FFFFFF"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textView20"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/border_truth_table"
+                            android:fontFamily="@font/courierprime_bold"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="0"
+                            android:textAlignment="center"
+                            android:textColor="#FFFFFF"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textView21"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/border_truth_table"
+                            android:fontFamily="@font/courierprime_bold"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="1"
+                            android:textAlignment="center"
+                            android:textColor="#FFFFFF"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textView18"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/border_truth_table"
+                            android:fontFamily="@font/courierprime_bold"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="NOT A"
+                            android:textAlignment="center"
+                            android:textColor="#FFFFFF"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/mTextViewTruthTableNotAnswer1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/border_truth_table"
+                            android:fontFamily="@font/courierprime_bold"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="@string/question_mark"
+                            android:textAlignment="center"
+                            android:textColor="#FF0000"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/mTextViewTruthTableNotAnswer2"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/border_truth_table"
+                            android:fontFamily="@font/courierprime_bold"
+                            android:gravity="center"
+                            android:padding="8dp"
+                            android:text="@string/question_mark"
+                            android:textAlignment="center"
+                            android:textColor="#FF0000"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView18"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_truth_table"
-                    android:fontFamily="@font/courierprime_bold"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="NOT A"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/mTextViewTruthTableNotAnswer1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_truth_table"
-                    android:fontFamily="@font/courierprime_bold"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="@string/question_mark"
-                    android:textAlignment="center"
-                    android:textColor="#FF0000"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/mTextViewTruthTableNotAnswer2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_truth_table"
-                    android:fontFamily="@font/courierprime_bold"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="@string/question_mark"
-                    android:textAlignment="center"
-                    android:textColor="#FF0000"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-        </LinearLayout>
+        </ScrollView>
 
         <Button
             android:id="@+id/mButtonTruthTableNOTSubmit"
