--- a/app/src/main/res/layout/activity_user_logs.xml
+++ b/app/src/main/res/layout/activity_user_logs.xml
@@ -75,7 +75,7 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/courierprime_bold"
                     android:gravity="center_vertical"
-                    android:text="Message display time (seconds):"
+                    android:text="Message display time (minutes):"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
                     android:textStyle="bold"
